<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Information">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#353E4F"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/personal_info"
            android:textColor="@color/white"
            android:textSize="46sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="24dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.3"
                android:contentDescription="@string/name_desc"
                app:srcCompat="@drawable/name" />

            <EditText
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/fields"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/name_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/purple_500" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="24dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.3"
                android:contentDescription="@string/username_desc"
                app:srcCompat="@drawable/username" />

            <EditText
                android:id="@+id/Username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/fields"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/purple_500" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="24dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.3"
                android:contentDescription="@string/age_desc"
                app:srcCompat="@drawable/age" />

            <EditText
                android:id="@+id/Age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/fields"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/age_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/purple_500" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="24dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.3"
                android:contentDescription="@string/uni_desc"
                app:srcCompat="@drawable/university" />

            <EditText
                android:id="@+id/University"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/fields"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/uni_hint"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/purple_500" />
        </LinearLayout>

        <Button
            android:id="@+id/finish_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="90dp"
            android:background="@drawable/button"
            android:fontFamily="monospace"
            android:padding="10dp"
            android:text="@string/btn_2_name"
            android:textSize="24sp"
            app:backgroundTint="@android:color/holo_orange_dark" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>